# EmotiStudy

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/afif/emotistudy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/assets/: autoencoder_mobile.pt  fer_model.tflite  vocab.json
app/src/main/cpp/: CMakeLists.txt  opensmile_jni.cpp
app/src/main/emo_large.conf/: emo_large.conf
app/src/main/java/: AudioRecorderService.kt
app/src/main/java/com/afif/emotistudy/: EmotionClassifier.kt  FaceDetectionActivity.kt  FaceDetectionViewModel.kt  FaceOverlayView.kt  HomeActivity.java  LoginActivity.kt  NativeBridge.kt  TypingMoodActivity.kt  VoiceEmotionClassifier.kt  VoiceMoodActivity.kt
app/src/main/ml/: voice_mood_model.tflite
app/src/main/res/drawable/: ic_keyboard.xml
app/src/main/res/layout/: activity_face_detection.xml  activity_home.xml  activity_login.xml  activity_typing_mood.xml  activity_voice_mood.xml  moodistoryactivity.xml
app/src/main/res/mipmap-anydpi-v26/: ic_emotistudy_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/afif/emotistudy/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
